@@ -70,23 +70,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>--add-opens
-                        jdk.compiler/com.sun.tools.javac.api=io.github.aglibs.lathe.server
-                        --add-opens
-                        jdk.compiler/com.sun.tools.javac.comp=io.github.aglibs.lathe.server
-                        --add-opens
-                        jdk.compiler/com.sun.tools.javac.tree=io.github.aglibs.lathe.server
-                        --add-opens
-                        jdk.compiler/com.sun.tools.javac.util=io.github.aglibs.lathe.server
-                        --add-opens
-                        jdk.compiler/com.sun.tools.javac.code=io.github.aglibs.lathe.server
-                        --add-opens
-                        jdk.compiler/com.sun.tools.javac.file=io.github.aglibs.lathe.server
-                        --add-opens
-                        jdk.compiler/com.sun.tools.javac.main=io.github.aglibs.lathe.server
-                        --add-exports
-                        jdk.compiler/com.sun.tools.javac.parser=io.github.aglibs.lathe.server
-                        --add-exports
+          <argLine>--add-exports
                         jdk.compiler/com.sun.tools.javac.api=com.google.googlejavaformat
                         --add-exports
                         jdk.compiler/com.sun.tools.javac.file=com.google.googlejavaformat
